src/main/java/com/example/demo/security/error/Error.java
package com.example.demo.security.error;

public interface Error {
    String getErrStr();
    String getErrId();
}
